--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,1 +1,7 @@
-%h1 This is the Index
+- @posts.each do |post|
+	%h2= post.title
+	%p
+		Created at 
+		= time_ago_in_words(post.created_at)
+
+= link_to "New Post" , new_post_path()
